# sentiment-analysis

./: .gitignore  LICENSE  README-EN.md  README.md  README_EN.md  code.md  config.yaml  main.py  product.md  pyproject.toml  requirements.txt
models/: base_model.py  improved_model.py
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_evaluation_analysis.ipynb  04_ablation_study.ipynb
results/: ablation_study_report.md  evaluation_summary.md
src/: __init__.py  config.py  data_loader.py  data_preprocessing.py  evaluator.py  feature_extractor.py  model_evaluation.py  model_training.py  models.py  preprocessor.py  trainer.py  utils.py  visualizer.py
tests/: __init__.py  run_tests.py  test_config.py  test_data_preprocessing.py  test_model_evaluation.py  test_model_training.py  test_utils.py
